# uBIOPOT-Firmware

./: .clang-format  .gitignore  CMakeLists.txt  DPASV.md  Design Improvement.md  Dev-Env.md  Flash-Firmware.md  README.md  Sim-Fix.md  capture_20260712_172744.ndjson  capture_20260712_172938.ndjson  capture_20260712_174602.ndjson  capture_20260712_181901.ndjson  capture_20260712_195714.ndjson  capture_20260712_201222.ndjson  capture_20260712_204626.ndjson  capture_20260712_211942.ndjson  capture_20260712_220455.ndjson  capture_20260712_222156.ndjson  capture_20260712_222726.ndjson  capture_20260712_224251.ndjson  capture_20260712_232514.ndjson  capture_20260712_234854.ndjson  capture_20260713_000743.ndjson  capture_20260713_002709.ndjson  capture_20260713_003830.ndjson  capture_20260713_010504.ndjson  diagram.json  partitions.csv  pytest.ini  sdkconfig.defaults  wokwi.toml
.github/workflows/: ci.yml
chips/: ads1115.c  ads1115.chip.json  mcp4921.c  mcp4921.chip.json
components/acq_engine/: CMakeLists.txt
components/acq_engine/include/: acq_engine.h
components/acq_engine/src/: acq_engine.c
components/echem_core/: CMakeLists.txt
components/echem_core/include/echem_core/: calibration.h  cv.h  dpv.h  metal_id.h  peaks.h  protocol.h  scan_state.h  technique.h
components/echem_core/src/: calibration.c  cv.c  dpv.c  metal_id.c  peaks.c  protocol.c  scan_state.c  technique.c
components/net_comms/: CMakeLists.txt
components/net_comms/include/: net_comms.h  net_comms_protocol.h
components/net_comms/src/: net_comms.c
components/pstat_hal/: CMakeLists.txt
components/pstat_hal/include/pstat_hal/: pstat_hal.h
components/pstat_hal/src/: hal_adc.c  hal_callbacks.c  hal_dac.c  hal_io.c  hal_mux.c
components/serial_comms/: CMakeLists.txt
components/serial_comms/include/: serial_comms.h  serial_comms_protocol.h
components/serial_comms/src/: serial_comms.c
components/ui_tft/: CMakeLists.txt
components/ui_tft/include/: ui_tft.h
components/ui_tft/src/: scr_home.c  scr_results.c  scr_scan.c  scr_settings.c  scr_splash.c  scr_toast.c  screen_mgr.c  screen_mgr.h  ui_tft.c
host_test/: CMakeLists.txt  test_calibration.c  test_dpv.c  test_net_comms.c  test_peaks.c  test_protocol.c  test_scan_state.c  test_serial_protocol.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
sim/: README.md  WSL_SIM_SETUP.md  lv_conf.h  main_sim.c
sim/stubs/: acq_engine.h  esp_err.h  esp_log.h  esp_lvgl_port.h
sim/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
sim/stubs/pstat_hal/: pstat_hal.h
test/: mock_ws_server.py  requirements.txt  test_p5_protocol.py  test_p7_pty.py  test_p7_serial.py
tools/: observe_scan.py  serial_client.py
web/: index.html  inline.mjs  mock_backend.js  package-lock.json  package.json  playwright.config.js  vite.config.js
web/src/: index.html  main.js  potentiostat-core.js  style.css
web/tests/: e2e.spec.js  global-setup.js
